exports[`NavMenu should render menu with no items 1`] = `
<div
  className="core-nav-section core-padded-row" />
`;

exports[`NavMenu should render menu with two items, and none selected 1`] = `
<div
  className="core-nav-section core-padded-row">
  <button
    className="btn btn-primary core-btn core-padded-row "
    onClick={[Function]}
    title="Connection map (Alt+1)">
    <span
      className="icon-columns" />
    <span>
      Connection map
    </span>
  </button>
  <button
    className="btn btn-primary core-btn core-padded-row "
    onClick={[Function]}
    title="Server setup (Alt+2)">
    <span
      className="icon-indent-right" />
    <span>
      Server setup
    </span>
  </button>
</div>
`;

exports[`NavMenu should render menu with two items, and one selected 1`] = `
<div
  className="core-nav-section core-padded-row">
  <button
    className="btn btn-primary core-btn core-padded-row active"
    onClick={[Function]}
    title="Connection map (Alt+1)">
    <span
      className="icon-columns" />
    <span>
      Connection map
    </span>
  </button>
  <button
    className="btn btn-primary core-btn core-padded-row "
    onClick={[Function]}
    title="Server setup (Alt+2)">
    <span
      className="icon-indent-right" />
    <span>
      Server setup
    </span>
  </button>
</div>
`;
